--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,17 @@
+# render.yaml - Deploy Vite + Node/Express project
+
 services:
   - type: web
-    name: hn-renovation
+    name: hn-renovation      # Your service name
     env: node
-    plan: free
+    plan: free               # Free instance
+    region: oregon           # Change if you want a different region
+    branch: main             # Branch to deploy
     buildCommand: npm install && npm run build
     startCommand: npm run start
-    branch: main
-    autoDeploy: true
+    autoDeploy: true         # Auto-deploy on push
+    envVars:
+      - key: PORT
+        value: "5000"
+      - key: GOOGLE_API_KEY
+        from: env             # Use Render dashboard env variable for secret
