--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 GOOGLE_API_KEY=AIzaSyDE_9Tnv-GlXDdzBWpwv4nGPowyVtlO1gM
 EMAIL_USER=hn.renovation.fr@gmail.com
+EMAIL_PASS=kodfvmlgojsfkvmq
 VITE_API_URL=http://localhost:5000
