switch from nodemailer to resend

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ GOOGLE_API_KEY=AIzaSyDE_9Tnv-GlXDdzBWpwv4nGPowyVtlO1gM
 EMAIL_USER=hn.renovation.fr@gmail.com
 EMAIL_PASS=kodfvmlgojsfkvmq
 VITE_API_URL=http://localhost:5000
+RESEND_API_KEY=re_Tjw1LmFo_CpLWk8dMaZ2fQnSEgXs8hQXt
