--- a/.env
+++ b/.env
@@ -3,3 +3,15 @@ EMAIL_USER=hn.renovation.fr@gmail.com
 EMAIL_PASS=kodfvmlgojsfkvmq
 VITE_API_URL=http://localhost:5000
 RESEND_API_KEY=re_Tjw1LmFo_CpLWk8dMaZ2fQnSEgXs8hQXt
+
+CLOUDINARY_CLOUD_NAME=dbgsfm1ne
+CLOUDINARY_API_KEY=931811479585682
+CLOUDINARY_API_SECRET=ShCM1-wHdTI2NLFFgagwKw68Xww
+# Or use full URL:
+# CLOUDINARY_URL=cloudinary://931811479585682:ShCM1-wHdTI2NLFFgagwKw68Xww@dbgsfm1ne
+
+ADMIN_EMAIL=admin@hn-renovation.fr
+ADMIN_PASSWORD=123456789
+JWT_SECRET=your-very-strong-secret-1234567890
+
+DATABASE_URL=postgres://hn_user:ClAFVixR0CA9qZ0UukHBI5JW5M2AYJcH@dpg-d3p8usili9vc73bct8p0-a.oregon-postgres.render.com:5432/hn_db_lx9k?sslmode=require
